Tue Feb 10 11:19:11 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (chdir, delete, gettextfile, mdtm, mkdir, nlst,
	  putbinaryfile, puttextfile, rename, rmdir, size): support
	  Pathname. Patch by Joe Rafaniello. [fix GH-828]

Mon Feb  9 16:36:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot (package): get rid of loading unbundled and
	  unexpected libraries.  [ruby-core:67977] [Bug #10822]

Sun Feb  8 20:09:37 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/net/http/header.rb: pass header names as symbols.
	  Patch by @DamirSvrtan [fix GH-805]
	* test/net/http/test_httpheader.rb: added test.

Sun Feb  8 13:04:25 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/getaddrinfo.c (get_addr): reject too long hostname to
	  get rid of GHOST vulnerability on very old platforms.

	* ext/socket/raddrinfo.c (make_hostent_internal): ditto, paranoic
	  check for the canonnical name.

Sun Feb  8 12:48:38 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry::API): use wide
	  versions of RegDeleteValue and RegDeleteKey.
	  [ruby-core:67958] [Bug #10820]

Sat Feb  7 22:13:08 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_record.rb: remove test using .NET
	  Framework 3.5 because it is not included in Windows 8/8.1.

Sat Feb  7 19:25:25 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (has_magic): always get long path name on Windows even if
	  no tilde is there.  [ruby-core:68011] [Bug #10819]

	* dir.c (replace_real_basename): FindFirstFile ignore redirection
	  character, check if exists before call it.  cf. [Bug #8597]

Sat Feb  7 13:30:11 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_record.rb
	  (test_ole_instance_variable_get): correct VT_RECORD type and
	  instance variables.

Fri Feb  6 17:47:05 2015  Aaron Patterson <aaron@tenderlovemaking.com>
